# AI-Release-Governance-Deployment-Control-Plane

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: README.md
configs/approvals/: ci-smoke.yaml  dev.yaml  exposure_routing.yaml  local-demo.yaml  prod.yaml  staging.yaml
configs/artifacts/: prompts.yaml  safety_policies.yaml  serving_configs.yaml  workflows.yaml
configs/bundles/: canary_failure.yaml  customer_support_release_v2.yaml  full_bundle_success.yaml  offline_blocked.yaml  prompt_only.yaml  serving_config_change.yaml  shadow_disagreement.yaml  workflow_only.yaml
configs/environments/: ci-smoke.yaml  dev.yaml  local-demo.yaml  prod.yaml  staging.yaml
configs/observability/: dev.yaml  local-demo.yaml  pricing_profiles.yaml  prod.yaml  staging.yaml
configs/policies/: ci-smoke.yaml  dev.yaml  local-demo.yaml  prod.yaml  staging.yaml
configs/rollout_strategies/: ci-smoke.yaml  dev.yaml  local-demo.yaml  prod.yaml  staging.yaml
data/sample/: release_bundle_000.json  rollback_postmortem_template.md
data/telemetry/: sample_telemetry.jsonl
docker/: Dockerfile  docker-compose.yml
scripts/: run_demo.py
src/ai_release_control_plane/: __init__.py  cli.py  (+2 more)
tests/: conftest.py  test_approval_workflow.py  test_bundle_diff.py  test_canary_engine.py  test_cli_commands.py  test_e2e_release_flow.py  test_e2e_rollback_flow.py  test_exposure_controller.py  test_offline_gate.py  test_policy_engine.py  test_rollback_logic.py  test_schemas.py  test_shadow_engine.py  test_storage_layer.py
(+36 files in other folders)
